--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: docker:17.07.0-ce
+      - image: docker:17.07.0-ce-git
 
     steps:
       - checkout
