--- a/root/etc/nginx/nginx.conf
+++ b/root/etc/nginx/nginx.conf
@@ -13,7 +13,7 @@ http {
     listen 8080;
     server_name localhost;
 
-    root /var/drupal/www;
+    root /projects/drupal/www;
 
     location = /favicon.ico {
       log_not_found off;
