--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -13,6 +13,7 @@ services:
   db:
     image: mysql:5.5
     environment:
+      - MYSQL_DATABASE=test
       - MYSQL_ALLOW_EMPTY_PASSWORD=yes
-    # ports:
-    #   - "3306:3306"
+    ports:
+      - "3306:3306"
