Use web instead of www for docroot
For consistency with Pantheon and others.

--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -4,7 +4,7 @@ services:
   drupal:
     image: digdep/drupal-base
     volumes:
-      - /path/to/drupal:/projects/drupal/www:rw,delegated
+      - /path/to/drupal:/projects/drupal/web:rw,delegated
     links:
       - db
     ports:
