--- a/root/etc/supervisord.conf
+++ b/root/etc/supervisord.conf
@@ -1,7 +1,18 @@
+; Allow services to be restarted through supervisorctl.
+[unix_http_server]
+file=/tmp/supervisord.sock
+
 [supervisord]
 ; Don't create a log file, just log to stdout.
 logfile=/dev/null
 pidfile=/tmp/supervisord.pid
+
+[supervisorctl]
+serverurl=unix:///tmp/supervisord.sock
+
+; Must exist for supervisorctl to work. See sample.conf.
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface
 
 [program:nginx]
 command=nginx -g "daemon off; pid /tmp/nginx.pid;"
