--- a/root/etc/php-fpm.conf
+++ b/root/etc/php-fpm.conf
@@ -10,5 +10,8 @@ pm.start_servers = 2
 pm.min_spare_servers = 1
 pm.max_spare_servers = 5
 
+; Make certain environment variables available to PHP.
+env[SMTPHOST] = $SMTPHOST
+
 ; Ensure worker stdout and stderr are sent to the main error log.
 catch_workers_output = yes
