Increase client_max_body_size in line with PHP defaults

--- a/root/etc/nginx/nginx.conf
+++ b/root/etc/nginx/nginx.conf
@@ -8,6 +8,8 @@ http {
 
   sendfile on;
 
+  client_max_body_size 2M;
+
   # Adapted from https://www.nginx.com/resources/wiki/start/topics/recipes/drupal/.
   server {
     listen 8080;
