--- a/root/etc/php/conf.d/opcache.ini
+++ b/root/etc/php/conf.d/opcache.ini
@@ -5,6 +5,7 @@ zend_extension = /usr/lib/php/extensions/no-debug-non-zts-20160303/opcache.so
 opcache.memory_consumption = 128
 opcache.interned_strings_buffer = 8
 opcache.max_accelerated_files = 4000
-opcache.revalidate_freq = 60
+; opcache.revalidate_freq = 60
+opcache.revalidate_freq = 5
 opcache.fast_shutdown = 1
 opcache.enable_cli = 1
