--- a/root/etc/nginx/nginx.conf
+++ b/root/etc/nginx/nginx.conf
@@ -10,6 +10,11 @@ http {
 
   client_max_body_size 2M;
 
+  # Raised to prevent "upstream sent too big header while reading response
+  # header from upstream" error.
+  fastcgi_buffers 16 4k;
+  fastcgi_buffer_size 16k;
+
   # Adapted from https://www.nginx.com/resources/wiki/start/topics/recipes/drupal/.
   server {
     listen 8080;
