Update Docker images used for CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,13 +3,13 @@ version: 2
 jobs:
   build:
     docker:
-      - image: docker:17.07.0-ce-git
+      - image: docker:17-git
 
     steps:
       - checkout
 
       - setup_remote_docker:
-          version: 17.07.0-ce
+          version: '17'
 
       - run: 
           name: Build image
