--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - checkout
 
       - setup_remote_docker:
-          version: '17'
+          version: 17.10.0-ce
 
       - run: 
           name: Build image
