Add note about PHP bug

--- a/root/etc/php/conf.d/opcache.ini
+++ b/root/etc/php/conf.d/opcache.ini
@@ -8,4 +8,6 @@ opcache.max_accelerated_files = 4000
 ; opcache.revalidate_freq = 60
 opcache.revalidate_freq = 5
 opcache.fast_shutdown = 1
+; This may cause PHP warnings on OS X with Homebrew, turn off as a workaround.
+; See https://bugs.php.net/bug.php?id=74980
 opcache.enable_cli = 1
