Use Debian Jessie and support Cypress

--- a/php-fpm.conf
+++ b/php-fpm.conf
@@ -1,8 +1,13 @@
 [global]
+pid = /var/run/php7.1-fpm.pid
 error_log = /dev/stderr
 
 [www]
-listen = /tmp/php-fpm.sock
+user = www-data
+group = www-data
+listen = /var/run/php7.1-fpm.sock
+listen.owner = www-data
+listen.group = www-data
 
 pm = dynamic
 pm.max_children = 20
@@ -15,3 +20,9 @@ env[SMTPHOST] = $SMTPHOST
 
 ; Ensure worker stdout and stderr are sent to the main error log.
 catch_workers_output = yes
+
+; Don't duplicate errors via SAPI into NGINX's logs.
+php_flag[fastcgi.logging] = no
+
+; For Drupal.
+php_value[memory_limit] = 256M
