--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,21 +1,21 @@
 ; Allow services to be restarted through supervisorctl.
 [unix_http_server]
-file=/tmp/supervisord.sock
+file=/var/run/supervisor.sock
 
 [supervisord]
 ; Don't create a log file, just log to stdout.
 logfile=/dev/null
-pidfile=/tmp/supervisord.pid
+pidfile=/var/run/supervisord.pid
 
 [supervisorctl]
-serverurl=unix:///tmp/supervisord.sock
+serverurl=unix:///var/run/supervisord.pid
 
 ; Must exist for supervisorctl to work. See sample.conf.
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface
 
 [program:nginx]
-command=nginx -g "daemon off; pid /tmp/nginx.pid;"
+command=nginx -g "daemon off; pid /var/run/nginx.pid;"
 ; Forward everything to our stdout/stderr.
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
@@ -23,7 +23,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:php-fpm]
-command = php-fpm -F
+command = php-fpm7.1 -F
 ; Forward everything to our stdout/stderr.
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
