--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,5 @@
+user www-data;
+
 events {
   # The events block is required, but may be empty.
 }
@@ -102,7 +104,7 @@ http {
       # PHP 7 socket location.
       #fastcgi_pass unix:/var/run/php/php7.0-fpm.sock;
       #fastcgi_pass localhost:9000;
-      fastcgi_pass unix:/tmp/php-fpm.sock;
+      fastcgi_pass unix:/var/run/php7.1-fpm.sock;
     }
 
     # Fighting with Styles? This little gem is amazing.
