--- a/php-fpm.conf
+++ b/php-fpm.conf
@@ -15,7 +15,7 @@ pm.start_servers = 2
 pm.min_spare_servers = 1
 pm.max_spare_servers = 5
 
-; Make certain environment variables available to PHP.
+; Pass through the SMTPHOST environment variable to BusyBox sendmail.
 env[SMTPHOST] = $SMTPHOST
 
 ; Ensure worker stdout and stderr are sent to the main error log.
@@ -23,6 +23,3 @@ catch_workers_output = yes
 
 ; Don't duplicate errors via SAPI into NGINX's logs.
 php_flag[fastcgi.logging] = no
-
-; For Drupal.
-php_value[memory_limit] = 256M
