--- a/supervisord.conf
+++ b/supervisord.conf
@@ -15,7 +15,7 @@ serverurl=unix:///var/run/supervisord.pid
 supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface
 
 [program:nginx]
-command=nginx -g "daemon off; pid /var/run/nginx.pid;"
+command=/usr/sbin/nginx -g "daemon off;"
 ; Forward everything to our stdout/stderr.
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
@@ -23,7 +23,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:php-fpm]
-command = php-fpm7.1 -F
+command=/usr/sbin/php-fpm7.1 -F
 ; Forward everything to our stdout/stderr.
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
